welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: not found: value pos2
     if (nums(i)>=pos&&pos2!=0) {
                       ^indexOfMaxValue:12: error: not enough arguments for method indexOfValue: (nums: Array[Int], lookingFor: Int)Int.
Unspecified value parameter lookingFor.
return indexOfValue(pos)
                   ^